[package]
name = "simplex-consensus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4"
digest = "0.10"
signature = "2.0"
futures = "0.3"
tokio = { version = "1.27", features = ["time", "rt", "macros"] }